--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<meta charset="utf-8">
 
 		<title>Chickens: A Worm-like Game</title>
-
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<link rel="stylesheet" href="rsc/main.css">
 
 	</head>
@@ -26,7 +26,8 @@
 			<div id="foreground-layer"></div>
 		</div>
 
-		<script src="js/renderer.js"></script>
-		<script src="js/game.js"></script>
+		<script src="rsc/sounds.js"></script>
+		<script src="rsc/renderer.js"></script>
+		<script src="rsc/game.js"></script>
 	</body>
 </html>
