--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<!--
+
+<head>
+	<!--
 		Chickens, https://github.com/474-SEGFAULTS/Chickens
 
 		Members:
@@ -13,20 +14,79 @@
 
 		Team Name: The SegFaults
 		-->
-		<meta charset="utf-8">
+	<meta charset="utf-8">
 
-		<title>Chickens: A Worm-like Game</title>
+	<title>Chickens: A Worm-like Game</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="rsc/main.css">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Gloria+Hallelujah&family=Permanent+Marker&display=swap"
+		rel="stylesheet">
+	<script src="rsc/renderer.js"></script>
+	<script src="rsc/game.js"></script>
 
-		<link rel="stylesheet" href="rsc/main.css">
+	<style type="text/css">
+		body {
+			width: 100vw;
+			height: 100vh;
+			background-position: center 0;
+		}
 
-	</head>
-	<body>
+		#main_menu {
+			position: absolute;
+			transform: translateX(-50%) translateY(-50%);
+			left: 50%;
+			top: 50%;
+			width: 20%;
+			height: 30%;
+		}
+
+		#menuScreen {
+			background-image: url('rsc/img/main_menu_background.jpg');
+			background-size: 100% 100%;
+			background-repeat: no-repeat;
+			position: absolute;
+			width: 100%;
+			height: 100%;
+
+		}
+	</style>
+</head>
+
+<body>
+	<div id='menuScreen'>
 		<div id="game">
 			<div id="background-layer"></div>
 			<div id="foreground-layer"></div>
 		</div>
 
-		<script src="js/renderer.js"></script>
-		<script src="js/game.js"></script>
-	</body>
+
+		<div id="title">
+			<h1>Chickens</h1>
+		</div>
+		<div id="main_menu" style="text-align: center">
+
+			<p><button id='singlePlayerbtn' type="button" class="button">
+				singlePlayer
+			</button></p>
+			
+			<p><button id='multiPlayerbtn' type="button" class="button">
+				multiPlayer
+			</button></p>
+		</div>
+
+
+		<div id='singlePlayer'>
+
+		</div>
+
+		<div id='multiPlayer'>
+
+		</div>
+
+		
+	</div>
+
+</body>
+
 </html>
