stubbing renderer functions

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
 
 	</head>
 	<body>
+		<div id="tiles">
+			<!-- Put all map, player images that will be "drawn" on the screen
+				here as img tags.
+			-->
+			<img id="example" src="..." width="100px" height="100px">
+		</div>
+
 		<div id="game">
 			<div id="background-layer"></div>
 			<div id="foreground-layer"></div>
