--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		rel="stylesheet">
 	<script src="rsc/renderer.js"></script>
 	<script src="rsc/game.js"></script>
-  	<script src="rsc/sounds.js"></script>
+  <script src="rsc/sounds.js"></script>
 
 </head>
 
@@ -63,7 +63,7 @@
 	<div id='multiPlayer'>
 		<p>MultiPlayer Scene</p>
 	</div>
-
+<audio src="rsc/sounds/CursorSelect.wav" id="CursorSelect" type="audio/wav"></audio>
 </body>
 
 </html>
