--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 				singlePlayer
 			</button></p>
 			
-			<p><button id='multiPlayerbtn' type="button" class="button">
-				multiPlayer
+			<p><button id='instructionsbtn' type="button" class="button">
+				instructions
 			</button></p>
 		</div>
 
@@ -60,8 +60,8 @@
 		<p>SinglePlayer Scene</p>
 	</div>
 
-	<div id='multiPlayer'>
-		<p>MultiPlayer Scene</p>
+	<div id='instructions'>
+		<p>instructions Scene</p>
 	</div>
 
 </body>
