--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<h2>Good luck Chicken, go defeat those enemies!</h2>
 		</div>
 
-		<div id="buttons" style="text-align: center">
+		<div id="inst_buttons" style="text-align: center">
 			<p><button id='mainMenubtn' type="button" class="button">
 				mainMenu
 			</button></p>
