forgot to add a word in the instructions now added

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		</div>
 
 		<div id="inst_written">
-			<h2>Welcome to Chickens! This is a fun single player.</h2>
+			<h2>Welcome to Chickens! This is a fun single player game.</h2>
 			<h2>The game consisits of you, the chicken, running around a map trying to defeat different enemies that appear in the map.</h2>
 			<h2>Use the 'w' key to jump, the 'a' key to move left, the 'd' key to move right, the 's' key to go down, and the space bar to shoot.</h2>
 			<h2>The game consists of 5 rounds/levels to compete and each level gets harder.</h2>
