Attempting to fix formatting

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<div id="title">
 			<h1>Chickens</h1>
 		</div>
-		<div id="buttons" style="text-align: center">
+		<div id="Main_buttons" style="text-align: center">
 
 			<p><button id='singlePlayerbtn' type="button" class="button">
 				singlePlayer
