trying to see it

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 	<!-- singel_player -->
 	<div id='singlePlayer'>
 		<p>SinglePlayer Scene</p>
+		<div class="bell_pepper"></div>
+
 	</div>
 
 	<!-- instructions_menu -->
