added two weapons - garlic and enemy

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 	<!-- singel_player -->
 	<div id='singlePlayer'>
 		<p>SinglePlayer Scene</p>
+		<div class="garlic"></div>
+		<div class="enemy_weapon"></div>
 	</div>
 
 	<!-- instructions_menu -->
