--- a/index.html
+++ b/index.html
@@ -18,55 +18,52 @@
 	<title>Chickens: A Worm-like Game</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="rsc/main.css">
-	<link
-		href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Gloria+Hallelujah&family=Permanent+Marker&display=swap"
-		rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Gloria+Hallelujah&family=Permanent+Marker&display=swap" rel="stylesheet">
+
 	<script src="rsc/renderer.js"></script>
-	<script src="rsc/game.js"></script>
 	<script src="rsc/sounds.js"></script>
+	<script src="rsc/game.js"></script>
 
 </head>
 <body>
 	<div id="tiles">
-			<!-- Put all map, player images that will be "drawn" on the screen
-				here as img tags.
-			-->
-			<img id="example" src="rsc/data/map/terrain.png" width="328px" height="257px" data-tileset="true">
-		</div>
+		<!-- Put all map, player images that will be "drawn" on the screen
+			here as img tags.
+		-->
+		<img id="example" src="rsc/data/map/terrain.png" width="328px" height="257px" data-tileset="true">
+	</div>
 	<!-- main_menu -->
-	<div id='menuScreen'>
-		<div id="game">
-			<div id="background-layer"></div>
-			<div id="foreground-layer"></div>
-		</div>
-
+	<div id='menu-screen'>
 		<div id="title">
 			<h1>Chickens</h1>
 		</div>
-		<div id="main_buttons" style="text-align: center">
+		<div id="main-buttons" style="text-align: center">
 
-			<p><button id='singlePlayerbtn' type="button" class="button">
+			<p><button id='single-player-btn' type="button" class="button">
 				singlePlayer
 			</button></p>
 
-			<p><button id='instructionsbtn' type="button" class="button">
+			<p><button id='instructions-btn' type="button" class="button">
 				instructions
 			</button></p>
 		</div>
 	</div>
 
-	<!-- singel_player -->
-	<div id='singlePlayer'>
-		<p>SinglePlayer Scene</p>
+	<!-- single_player -->
+	<div id='single-player'>
+		<div id="game">
+			<div id="background-layer"></div>
+			<div id="foreground-layer"></div>
+		</div>
 	</div>
 
 	<!-- instructions_menu -->
 	<div id='instructions'>
-		<div id="Instruction_title">
+		<div id="instructions-title">
 			<h1>Instructions</h1>
 		</div>
 
-		<div id="inst_written">
+		<div id="instructions-written">
 			<h2>Welcome to Chickens! This is a fun single player game.</h2>
 			<h2>The game consisits of you, the chicken, running around a map trying to defeat different enemies that appear in the map.</h2>
 			<h2>Use the 'w' key to jump, the 'a' key to move left, the 'd' key to move right, the 's' key to go down, and the space bar to shoot.</h2>
@@ -74,10 +71,12 @@
 			<h2>Good luck Chicken, go defeat those enemies!</h2>
 		</div>
 
-		<div id="inst_buttons" style="text-align: center">
-			<p><button id='mainMenubtn' type="button" class="button">
-				mainMenu
-			</button></p>
+		<div id="instructions-buttons" style="text-align: center">
+			<p>
+				<button id='main-menu-btn' type="button" class="button">
+					mainMenu
+				</button>
+			</p>
 		</div>
 
 	</div>
