--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 	<!-- singel_player -->
 	<div id='singlePlayer'>
 		<p>SinglePlayer Scene</p>
+		<div class = "bubbleWand"></div>
+		<div class = "thaiPepper"></div>
 	</div>
 
 	<!-- instructions_menu -->
