--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<!-- Put all map, player images that will be "drawn" on the screen
 				here as img tags.
 			-->
-			<img id="example" src="..." width="100px" height="100px">
+			<img id="lion" src="rsc/img/dynamic/characters/lion_enemy.png" width="100px" height="100px">
 		</div>
 	<!-- main_menu -->
 	<div id='menuScreen'>
