--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 		<!-- Put all map, player images that will be "drawn" on the screen
 			here as img tags.
 		-->
-		<img id="example" src="rsc/data/map/terrain.png" width="328px" height="257px" data-tileset="true">
+		<img id="terrain" src="rsc/data/map/terrain.png" width="328px" height="257px" data-tileset="true">
+		<img id="bmp-map" src="rsc/data/map/map-design.bmp" width="1827px" height="1028px">
 	</div>
 	<!-- main_menu -->
 	<div id='menu-screen'>
