the full update: weapons and yoUDee bird

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 	<!-- singel_player -->
 	<div id='singlePlayer'>
 		<p>SinglePlayer Scene</p>
+		<div class="y-flappingLeft"></div>
 		<div class="garlic"></div>
 		<div class="enemy_weapon"></div>
 	</div>
