--- a/index.html
+++ b/index.html
@@ -25,16 +25,19 @@
 		rel="stylesheet">
 	<script src="rsc/renderer.js"></script>
 	<script src="rsc/game.js"></script>
-  <script src="rsc/sounds.js"></script>
+	<script src="rsc/sounds.js"></script>
+	<script src="rsc/healthbar.js"></script>
+	
 
 </head>
+
 <body>
-  <div id="tiles">
-			<!-- Put all map, player images that will be "drawn" on the screen
+	<div id="tiles">
+		<!-- Put all map, player images that will be "drawn" on the screen
 				here as img tags.
 			-->
-			<img id="example" src="..." width="100px" height="100px">
-		</div>
+		<img id="example" src="..." width="100px" height="100px">
+	</div>
 	<!-- main_menu -->
 	<div id='menuScreen'>
 		<div id="game">
@@ -49,20 +52,27 @@
 		<div id="main_buttons" style="text-align: center">
 
 			<p><button id='singlePlayerbtn' type="button" class="button">
-				singlePlayer
-			</button></p>
-			
+					singlePlayer
+				</button></p>
+
 			<p><button id='instructionsbtn' type="button" class="button">
-				instructions
-			</button></p>
+					instructions
+				</button></p>
 		</div>
 
-		
+
 	</div>
-	
+
 	<!-- singel_player -->
 	<div id='singlePlayer'>
 		<p>SinglePlayer Scene</p>
+		<div class="bubble"></div>
+		<div class="bubbleWand"></div>
+		<div class="thaiPepper"></div>
+		<div class="health-bar">
+			<div class="health-bar-value">100%</div>
+			<div class="health-bar-fill"></div>
+		</div>
 	</div>
 
 	<!-- instructions_menu -->
@@ -73,20 +83,21 @@
 
 		<div id="inst_written">
 			<h2>Welcome to Chickens! This is a fun single player game.</h2>
-			<h2>The game consisits of you, the chicken, running around a map trying to defeat different enemies that appear in the map.</h2>
-			<h2>Use the 'w' key to jump, the 'a' key to move left, the 'd' key to move right, the 's' key to go down, and the space bar to shoot.</h2>
+			<h2>The game consisits of you, the chicken, running around a map trying to defeat different enemies that
+				appear in the map.</h2>
+			<h2>Use the 'w' key to jump, the 'a' key to move left, the 'd' key to move right, the 's' key to go
+				down, and the space bar to shoot.</h2>
 			<h2>The game consists of 5 rounds/levels to compete and each level gets harder.</h2>
 			<h2>Good luck Chicken, go defeat those enemies!</h2>
 		</div>
 
 		<div id="inst_buttons" style="text-align: center">
 			<p><button id='mainMenubtn' type="button" class="button">
-				mainMenu
-			</button></p>
+					mainMenu
+				</button></p>
 		</div>
 
 	</div>
 </body>
 
 </html>
-
