--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 		rel="stylesheet">
 	<script src="rsc/renderer.js"></script>
 	<script src="rsc/game.js"></script>
-  <script src="rsc/sounds.js"></script>
+	<script src="rsc/sounds.js"></script>
+	<script src="rsc/player.js"></script>
 
 </head>
 <body>
