--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@
 	<!-- singel_player -->
 	<div id='singlePlayer'>
 		<p>SinglePlayer Scene</p>
+		<div class="form-popup" id="myForm">
+			<form action="/action_page.php" class="form-container">
+				<h1>Would you like to exit the game?</h1>
+				<button id='backbtn' type="continue" class="btn">
+					Continue Game
+				</button>
+				<button id='cancelbtn' type="exit" class="btn cancel">
+					Exit Game
+				</button>
+			</form>
+
+		</div>
 	</div>
 
 	<!-- instructions_menu -->
