trying to find why it does not pop-up

--- a/index.html
+++ b/index.html
@@ -64,14 +64,15 @@
 	<div id='singlePlayer'>
 		<p>SinglePlayer Scene</p>
 		<div class="esc-popup" id="myForm">
-			<h1>Would you like to exit the game?</h1>
-			<button id='backbtn' type="button" class="btn">
-				Continue Game
-			</button>
-			<button id='cancelbtn' type="button" class="btn exit" onclick="closePop()">
-				Exit Game
-			</button>
-
+			<form class="form-container">
+				<h1>Would you like to exit the game?</h1>
+				<button id='backbtn' type="button" class="btn">
+					Continue Game
+				</button>
+				<button id='cancelbtn' type="button" class="btn exit" onclick="closePop()">
+					Exit Game
+				</button>
+			</form>
 		</div>
 	</div>
 
