--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 		<div class="esc-popup" id="myForm">
 			<form class="form-container">
 				<h1>Would you like to exit the game?</h1>
-				<button id='backbtn' type="button" class="btn">
+				<button id='backbtn' type="button" class="btn" onclick="closePop()">
 					Continue Game
 				</button>
-				<button id='cancelbtn' type="button" class="btn exit" onclick="closePop()">
+				<button id='cancelbtn' type="button" class="btn exit">
 					Exit Game
 				</button>
 			</form>
