test is basically working, chunks are 'undefined', drawMap almost ready

--- a/tests/draw.html
+++ b/tests/draw.html
@@ -13,7 +13,7 @@
 			-->
 			<img id="A" src="rsc/A.png" width="128px" height="128px">
 			<img id="B" src="rsc/B.png" width="128px" height="128px">
-			<img id="terrain" src="rsc/data/map/terrain.png" width="328px" height="257px" data-tileset="true">
+			<img id="terrain" src="../rsc/data/map/terrain.png" width="328px" height="257px" data-tileset="true">
 		</div>
 		<div id="game">
 			<div id="background-layer"></div>
@@ -28,6 +28,7 @@
 			<button type="button" class="cb" id="movedown">Move viewport down</button>
 			<button type="button" class="cb" id="moveleft">Move viewport left</button>
 		</div>
+		<script src="rsc/level0.js"></script>
 		<script src="../rsc/renderer.js"></script>
 		<script src="rsc/draw_test.js"></script>
 	</body>
