--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 	<script src="rsc/renderer.js"></script>
 	<script src="rsc/sounds.js"></script>
+	<script src="rsc/data/map/level0.js"></script>
 	<script src="rsc/game.js"></script>
 
 </head>
