--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<script src="rsc/renderer.js"></script>
 	<script src="rsc/sounds.js"></script>
 	<script src="rsc/data/map/level0.js"></script>
+	<script src="rsc/data/map/level1.js"></script>
 	<script src="rsc/game.js"></script>
 
 </head>
