fixed title screen, added helper function to renderer

--- a/index.html
+++ b/index.html
@@ -40,13 +40,19 @@
 
 	<!-- main_menu -->
 	<div id='menu-screen'>
-		<div id="title">
-			<h1>Chickens</h1>
+		<div class="title">
+			<!--<h1>Chickens</h1>-->
+			<img class="title_logo" src="rsc/img/titlescreen_logo.png" height="180px">
+			<h6>
+				from the
+				<a href="https://github.com/474-SEGFAULTS/Chickens" title="Go to our GitHub page.">
+					SEGFAULTS
+				</a>
+			</h6>
 		</div>
-		<div id="main-buttons" style="text-align: center">
-
+		<div class="main-buttons" style="text-align: center">
 			<p><button id='single-player-btn' type="button" class="button">
-				singlePlayer
+				single player
 			</button></p>
 
 			<p><button id='instructions-btn' type="button" class="button">
