--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 
 	<!-- instructions_menu -->
 	<div id='instructions'>
-		<div id="instructions-title">
+		<div class="instructions-title">
 			<h1>Instructions</h1>
 		</div>
 
-		<div id="instructions-written">
+		<div class="instructions-written">
 			<h2>Welcome to Chickens! This is a fun single player game.</h2>
 			<h2>The game consisits of you, the chicken, running around a map trying to defeat different enemies that appear in the map.</h2>
 			<h2>Use the 'w' key to jump, the 'a' key to move left, the 'd' key to move right, the 's' key to go down, and the space bar to shoot.</h2>
@@ -98,7 +98,7 @@
 		<div id="instructions-buttons" style="text-align: center">
 			<p>
 				<button id='main-menu-btn' type="button" class="button">
-					mainMenu
+					main menu
 				</button>
 			</p>
 		</div>
