--- a/index.html
+++ b/index.html
@@ -30,12 +30,6 @@
 
 </head>
 <body>
-  <div id="tiles">
-			<!-- Put all map, player images that will be "drawn" on the screen
-				here as img tags.
-			-->
-			<img id="lion" src="rsc/img/dynamic/characters/lion_enemy.png" width="100px" height="100px">
-		</div>
 	<!-- main_menu -->
 	<div id='menuScreen'>
 		<div id="game">
@@ -49,6 +43,8 @@
 		-->
 		<img id="terrain" src="rsc/data/map/terrain.png" width="328px" height="257px" data-tileset="true">
 		<img id="bmp-map" src="rsc/data/map/map-design.bmp" width="1827px" height="1028px">
+		<div id="player" class="player y-idleLeft" width="30px" height="30px"></div>
+		<img id="lion" src="rsc/img/dynamic/characters/lion_enemy.png" width="100px" height="100px">
 	</div>
 
 	<!-- main_menu -->
