--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 	<div id='happyEnding'>
 		<div class="moving_chicken"></div>
 		<h1>:D Congrats!!!</h1>
-		<h2>You Protected us from the enemies</h2>
-		<h2>You Defeat <h2>
+		<h2>You protected us from the enemies</h2>
+		<h2>You defeated <h2>
 				<h1 id=score>20</h1>
 				<h2>enemies !!!</h2>
 				<h2>Want to play again?</h2>
