attempting to make this work

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
 			<h2>Good luck Chicken, go defeat those enemies!</h2>
 		</div>
 
+		<div class="smoke_ani" id="smoke"></div>
+
 		<div id="instructions-buttons" style="text-align: center">
 			<p>
 				<button id='main-menu-btn' type="button" class="button">
