Added info from Happy's pr and connected happy end screen

--- a/index.html
+++ b/index.html
@@ -113,5 +113,34 @@
 		</div>
 	</div>
 
+		<!-- end scene -->
+	<div id='happyEnding'>
+		<div class="moving_chicken"></div>
+			<h1>:D Congrats!!!</h1>
+			<h2>You protected us from the enemies</h2>
+			<h2>You defeated <h2>
+			<h1 id=score>20</h1>
+			<h2>enemies !!!</h2>
+			<h2>Want to play again?</h2>
+			<div id="restart_button" style="text-align: center">
+				<p><button id='restartbtn' type="button" class="button">
+					restart
+				</button></p>
+		</div>
+	</div>
+   
+	<div id='badEnding'>
+		<div class="moving_chicken"></div>
+		<h1>It's not the END</h1>
+		<h2>We'll find another YouDee to help with you</h2>
+		<h2>Just press restart</h2>
+		<div id="restart_button2" style="text-align: center">
+			<p><button id='restartbtn2' type="button" class="button">
+				restart
+			</button></p>
+		</div>
+   
+	</div>
+
 </body>
 </html>
