--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
 		  <img id="lion" class="enemy" src="rsc/img/dynamic/characters/lion.png" width="30px" height="30px">
 	  	<img id="dragon" class="enemy" src="rsc/img/dynamic/characters/dragon.png" width="42px" height="30px">
 	  	<img id="chiltepin" class="chiltepin" src="rsc/img/dynamic/weapons/chiltepin/chiltepin.png" width="100px" height="100px">
-	  	<img id="bell_pepper" class="bell_pepper" src="rsc/img/dynamic/weapons/bell_pepper/bell_pepper.png" width="100px" height="100px">
+			<img id="bell_pepper" class="bell_pepper" src="rsc/img/dynamic/weapons/bell_pepper/bell_pepper.png" width="100px" height="100px">
+			<img id="bubble" class="bubble" src="rsc/img/dynamic/weapons/bubble/bubbles.png" width="100px" height="100px">
+			<img id="thai_pepper" class="thai_pepper" src="rsc/img/dynamic/weapons/thai_pepper/thai_pepper.png" width="100px" height="100px">
+			<img id="garlic" class="garlic" src="rsc/img/dynamic/weapons/garlic/garlic.png" width="100px" height="100px">
 	  	<img id="enemy_weapon" class="enemy_weapon" src="rsc/img/dynamic/weapons/enemy_weapon.png" width="100px" height="100px">
 
 		</div>
