--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		Team Name: The SegFaults
 		-->
 	<meta charset="utf-8">
-
+	<link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<title>Chickens: A Worm-like Game</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="rsc/main.css">
