--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
 		<div class="instructions-written">
 			<h2>Welcome to Chickens! This is a fun single player game.</h2>
 			<h2>The game consisits of you, the chicken, running around a map trying to defeat different enemies that appear in the map.</h2>
-			<h2>Use the 'w' key to jump, the 'a' key to move left, the 'd' key to move right, the 's' key to go down, and the space bar to shoot.</h2>
-			<h2>The game consists of 5 rounds/levels to compete and each level gets harder.</h2>
+			<h2>Use the 'w' key to jump, the 'a' key to move left, the 'd' key to move right, the 's' key to go down, 'e' key to change weapons and the space bar to shoot.</h2>
+			<h2>The game consists of infinte rounds/levels to compete and each level gets more enemies.</h2>
+			<h2>To exit the game press 'esc' and a pop up message should appear.</h2>
 			<h2>Good luck Chicken, go defeat those enemies!</h2>
 		</div>
 
