add smoke, add weapon image

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<img id="dragon" class="enemy" src="rsc/img/dynamic/characters/dragon.png" width="42px" height="30px">
 		<img id="chiltepin" class="chiltepin" src="rsc/img/dynamic/weapons/chiltepin/chiltepin.png" width="100px" height="100px">
 		<img id="bell_pepper" class="bell_pepper" src="rsc/img/dynamic/weapons/bell_pepper/bell_pepper.png" width="100px" height="100px">
-		<img id="bubble" class="bubble" src="rsc/img/dynamic/weapons/bubble/bubbles.png" width="100px" height="100px">
+		<img id="bubble" class="bubble" src="rsc/img/dynamic/weapons/bubble/bubble.png" width="100px" height="100px">
 		<img id="thai_pepper" class="thai_pepper" src="rsc/img/dynamic/weapons/thai_pepper/thai_pepper.png" width="100px" height="100px">
 		<img id="garlic" class="garlic" src="rsc/img/dynamic/weapons/garlic/garlic.png" width="100px" height="100px">
 		<img id="enemy_weapon" class="enemy_weapon" src="rsc/img/dynamic/weapons/enemy_weapon.png" width="100px" height="100px">
@@ -57,6 +57,9 @@
 	<div id="game">
 		<div id="background-layer"></div>
 		<div id="foreground-layer">
+			<div class="weapon_in_use" style="margin: 0 auto;width: 50%;">
+				<img src="rsc/img/dynamic/weapons/bell_pepper/bell_pepper.png">
+    </div>
 			<div class="wave-number">
 				Wave <span id="wave-number-counter">1</span>
 			</div>
